<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examen.kevinnextu.controldonantes.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gota"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:id="@+id/imageView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput"
        android:layout_below="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_usuario"
        >
        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput2"
        android:layout_below="@+id/txtInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        >
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:clickable="true"
        android:background="@color/red"
        android:textColor="@android:color/white"
        android:text="@string/iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInput2"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="43dp"
        android:id="@+id/btn_iniciar" />

    <Button
        android:clickable="true"
        android:background="@color/red"
        android:textColor="@android:color/white"
        android:text="@string/nuevo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_nuevo_usuario"
        android:layout_alignBaseline="@+id/btn_iniciar"
        android:layout_alignBottom="@+id/btn_iniciar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="2dp"/>

    <TextView
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
